# Stereo_Matching

./: CMakeLists.txt  README.md
dataset/pair_1/results/window_size_1/: dp_1_100.txt  naive_1.txt
dataset/pair_1/results/window_size_3/: dp_3_100.txt  naive_3.txt
dataset/pair_1/results/window_size_5/: dp_5_100.txt  naive_5.txt
dataset/pair_1/results/window_size_7/: dp_7_100.txt  naive_7.txt
dataset/pair_2/results/window_size_1/: naive_1.txt
dataset/pair_2/results/window_size_3/: dp_3_100.txt  naive_3.txt
dataset/pair_2/results/window_size_5/: dp_5_100.txt  naive_5.txt
dataset/pair_2/results/window_size_7/: dp_7_100.txt  naive_7.txt
dataset/pair_3/results/window_size_1/: dp_1_100.txt
dataset/pair_3/results/window_size_3/: dp_3_100.txt  naive_3.txt
dataset/pair_3/results/window_size_5/: dp_5_500.txt  naive_5.txt
dataset/pair_3/results/window_size_7/: dp_7_500.txt  naive_7.txt
dataset/pair_4/results/window_size_1/: dp_1_100.txt
dataset/pair_4/results/window_size_3/: dp_3_100.txt  naive_3.txt
dataset/pair_4/results/window_size_5/: dp_5_500.txt  naive_5.txt
dataset/pair_4/results/window_size_7/: dp_7_500.txt  naive_7.txt
dataset/pair_5/results/window_size_1/: dp_1_100.txt  naive_1.txt
dataset/pair_5/results/window_size_3/: dp_3_100.txt
dataset/pair_5/results/window_size_5/: dp_5_500.txt  naive_5.txt
dataset/pair_5/results/window_size_7/: dp_7_500.txt  naive_7.txt
src/: Documentation.ipynb  Dynamic_programing.cpp  Naive.cpp  main.h  pc_pair_1_3_normal.xyz  pc_pair_4_3.xyz  surface_normal.py  test.xyzn
(+16 files in other folders)
